samples/_failures_safe/1761171075_44c69b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_15de5e41.c: In function ‘main’:
./samples/SAFE/__tmp_15de5e41.c:139:13: error: expected declaration or statement at end of input
  139 |             return EXIT_FAILURE;
      |             ^~~~~~
./samples/SAFE/__tmp_15de5e41.c:139:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_15de5e41.c:139:13: error: expected declaration or statement at end of input
